# pjecz-plataforma-web-api-key

./: .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  pyproject.toml  requirements.txt
config/: settings.py
http-client/: autoridades.http  web_paginas.http  web_ramas.http
lib/: database.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  safe_string.py
plataforma_web/: app.py
plataforma_web/core/arc_documentos/: models.py
plataforma_web/core/arc_juzgados_extintos/: models.py
plataforma_web/core/arc_remesas/: models.py
plataforma_web/core/arc_remesas_documentos/: models.py
plataforma_web/core/arc_solicitudes/: models.py
plataforma_web/core/autoridades/: models.py
plataforma_web/core/bitacoras/: models.py
plataforma_web/core/boletines/: models.py
plataforma_web/core/centros_trabajos/: models.py
plataforma_web/core/cit_dias_inhabiles/: models.py
plataforma_web/core/distritos/: models.py
plataforma_web/core/domicilios/: models.py
plataforma_web/core/edictos/: models.py
plataforma_web/core/entradas_salidas/: models.py
plataforma_web/core/funcionarios/: models.py
plataforma_web/core/glosas/: models.py
plataforma_web/core/inv_categorias/: models.py
rest-client/: abogados.rest  archivo.rest  audiencias.rest  autoridades.rest  catalogos.rest  distritos.rest  domicilios.rest  edictos.rest  epocas.rest  funcionarios.rest  glosas.rest  listas_de_acuerdos.rest  materias.rest  materias_tipos_juicios.rest  modulos.rest  oficinas.rest  peritos.rest  peritos_tipos.rest  redam.rest  redams.rest  repsvm_agresores.rest  roles.rest  sentencias.rest  siga.rest  tesis_jurisprudencias.rest  ubicaciones_expedientes.rest  usuarios.rest
tests/: README.md  load_env.py  test_abogados.py  test_archivo.py  test_audiencias.py  test_autoridades.py  test_boletines.py  test_citas.py  test_distritos.py  test_domicilios.py  test_edictos.py  test_epocas.py  test_funcionarios.py  test_glosas.py  test_inventarios.py  test_listas_de_acuerdos.py  test_materias.py  test_materias_tipos_juicios.py  test_modulos.py  test_oficinas.py  test_peritos.py  test_peritos_tipos.py  test_permisos.py  test_redam.py  test_repsvm.py  test_repsvm_agresores.py  test_roles.py  test_sentencias.py  test_siga.py  test_tesis_jurisprudencias.py  test_ubicaciones_expedientes.py  test_usuarios.py  test_usuarios_roles.py  test_web_paginas.py  test_web_ramas.py
(+290 files in other folders)
