[tool.poetry]
package-mode = false
name = "pjecz_plataforma_web_api_key"
version = "1.0.0"
description = "API con autentificación para realizar operaciones con la base de datos de Plataforma Web."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^42.0"
fastapi = {extras = ["sqlalchemy"], version = "^0.111"}
fastapi-pagination = "^0.12"
google-auth = "^2.32"
google-cloud = "^0.34"
google-cloud-secret-manager = "^2.20"
google-cloud-storage = "^2.14"
gunicorn = "^22.0"
hashids = "^1.3"
psycopg2-binary = "^2.9"
pydantic = "^2.5"
pydantic-settings = "^2.1"
python-dotenv = "^1.0"
python-multipart = "^0.0.9"
pytz = "^2024.1"
sqlalchemy = "^2.0"
sqlalchemy-utils = "^0.41"
unidecode = "^1.3"
uvicorn = "^0.30"


[tool.poetry.group.dev.dependencies]
black = "^24.4"
faker = "^26.0"
isort = "^5.13"
poetry-plugin-export = "^1.8"
pylint = "^3.0"
pylint-sqlalchemy = "^0.3"
pytest = "^8.2"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
