[tool.poetry]
name = "pjecz-plataforma-web-api-key"
version = "4.2.0"
description = "API con autentificación para consultar y alimentar la base de datos Plataforma Web."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^43.0.0"
fastapi = "^0.112.0"
fastapi-pagination = "^0.12.26"
google-auth = "^2.32.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.20.2"
google-cloud-storage = "^2.18.0"
gunicorn = "^22.0.0"
hashids = "^1.3.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
pytz = "^2024.1"
sqlalchemy = "^2.0.32"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.3.8"
uvicorn = "^0.30.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
faker = "^26.1.0"
isort = "^5.13.2"
poetry-plugin-export = "^1.8.0"
pre-commit = "^3.8.0"
pylint = "^3.2.6"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
